<resources>
    <string name="app_name">A MOZZAFIATO</string>
    <string name="title_activity_splash">splash_activity</string>

    <string name="button_send">ENVIAR</string>
    <string name="yes">sim</string>
    <string name="not">não</string>

    <string name="home_collection">ACESSE NOSSA COLEÇÃO</string>
    <string name="home_news">NOVIDADES</string>
    <string name="home_about_us">SOBRE NÓS</string>
    <string name="home_about_us_description">Nós da A MOZZAFIATO oferecemos carros com história, carros clássicos que carregam lembranças. Prezamos pela transparência na venda de carros antigos, tendo como primordial objetivo a cumplicidade com seus clientes.</string>

    <string name="title_register">CADASTRO</string>
    <string name="category_input_image">Sua foto</string>
    <string name="category_input_country">País</string>
    <string name="category_input_state">Estado</string>
    <string name="category_input_name">Nome</string>
    <string name="category_input_email">Email</string>
    <string name="category_input_password">Senha</string>
    <string name="category_input_confirm_password">Confirmar senha</string>
    <string name="link_login">Efetuar login</string>

    <string name="title_login">LOGIN</string>
    <string name="link_register">Cadastre-se</string>
    <string name="link_forgot_password">Esqueceu a senha?</string>

    <string name="internet_error">Conecte-se a internet!</string>


    <string name="forgot_password_title">Recuperar conta</string>
    <string name="forgot_password_description">
        Forneça o endereço de e-mail associado à sua conta.
        Assim, poderemos enviar as instruções necessárias para a recuperação.
    </string>
    <string name="forgot_send_email">Receber email</string>

    <string name="title_category">Categorias</string>
    <string name="placeholder_search">Pesquise</string>
    <string name="title_colection">Coleção</string>

    <string name="profile_card_data">Meus dados</string>
    <string name="profile_card_favorite">Favoritos</string>
    <string name="profile_card_negotiate">Negociar automóvel</string>
    <string name="profile_card_contact">Entre em contato</string>

    <string name="profile_contact_title">Contato</string>
    <string name="profile_contact_street">Rua Auto, 2023, Jaraguá - SC</string>
    <string name="profile_contact_email">a.mozzafiato@a&amp;a.com</string>
    <string name="profile_contact_whatsapp">(47) 99999-9999</string>
    <string name="profile_contact_description">Escreva sua mensagem</string>

    <string name="profile_data_title">Meus dados</string>

    <string name="profile_negotiate_title">Negociar automóvel</string>
    <string name="profile_negotiate_name_car">Nome do automóvel *</string>
    <string name="profile_negotiate_model">Modelo *</string>
    <string name="profile_negotiate_year">Ano *</string>
    <string name="profile_negotiate_km">Km rodados *</string>
    <string name="profile_negotiate_fuel">Combustível *</string>
    <string name="profile_negotiate_color">Cor *</string>
    <string name="profile_negotiate_price">Preço(reais) *</string>
    <string name="profile_negotiate_images">Imagens do carro *</string>
    <string name="profile_negotiate_images_hint">Fazer upload</string>
    <string name="profile_negotiate_exchange">Câmbio *</string>
    <string name="profile_negotiate_manual">manual</string>
    <string name="profile_negotiate_automatic">automático</string>
    <string name="profile_negotiate_original">Original? *</string>
    <string name="profile_negotiate_obs">Observação</string>

    <string name="page_car_name">Nome</string>
    <string name="page_car_see_more">VEJA MAIS</string>
    <string name="page_car_price">preço</string>
    <string name="page_car_interest">TENHO INTERESSE</string>
    <string name="page_car_data">DADOS</string>
    <string name="page_car_year">Ano:</string>
    <string name="page_car_km">Km:</string>
    <string name="page_car_exchange">Câmbio:</string>
    <string name="page_car_category">Categoria:</string>
    <string name="page_car_engine">Motor:</string>
    <string name="page_car_fuel">Combustível:</string>
    <string name="page_car_traction">Tração:</string>
    <string name="page_car_max_speed">Velocidade máxima:</string>
    <string name="page_car_brand">Marca:</string>
    <string name="page_car_doors">Quantidade de portas:</string>
    <string name="page_car_cv">Cavalos:</string>
    <string name="page_car_loading">carregando</string>

    <string name="profile_negotiate_button_next">Próximo</string>


</resources>