<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

        <TextView
            android:id="@+id/forgot_password_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/forumregular"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/forgot_password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:textAlignment="center"
            android:fontFamily="@font/forumregular"
            android:text="@string/forgot_password_title"
            android:textColor="@color/white"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/forgot_password_description"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            android:fontFamily="@font/forumregular"
            android:text="@string/forgot_password_description"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgot_password_email_layout"
            style="@style/StyleInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgot_password_email_edit"
                style="@style/StyleTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category_input_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgot_password_button"
            style="@style/StyleButton"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_send_email"
            android:background="@drawable/rounded_border" />

</LinearLayout>