<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/transparent_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="60dp">

        <TextView
            android:id="@+id/login_app_name"
            style="@style/amozzafiatoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/forumregular"
            android:text="@string/title_login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_layout"
            style="@style/StyleInput"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_edit"
                style="@style/StyleTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category_input_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_layout"
            style="@style/StyleInput"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_edit"
                style="@style/StyleTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category_input_password"
                android:inputType="text|textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_link_forgot_password"
            style="@style/StyleLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/link_forgot_password"
            android:textAlignment="center" />

        <Button
            android:id="@+id/login_button_login"
            style="@style/StyleButton"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_border"
            android:text="@string/title_login" />

        <TextView
            android:id="@+id/login_link_register"
            style="@style/StyleLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/link_register"
            android:textAlignment="center">

        </TextView>

    </LinearLayout>


</ScrollView>