<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_profile"
    tools:context=".pages.fragments.Profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1000dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="false"
            android:orientation="vertical">

            <TextView
                android:id="@+id/registerAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="@font/forumregular"

                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:orientation="vertical"
                android:textAlignment="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="380dp"
                    android:layout_height="110dp"
                    app:cardElevation="10dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardCornerRadius="25dp"
                    android:layout_marginStart="-20dp"

                    android:backgroundTint="@color/grayMozzafiato">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingStart="35dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/profile_image"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/profile_image"
                            android:layout_gravity="center"
                            app:civ_border_color="@color/lightGray" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:paddingStart="20dp">

                            <TextView
                                android:id="@+id/profile_name_user"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/forumregular"
                                android:textSize="30sp"
                                android:textAlignment="textStart"
                                android:text="@string/category_input_name"
                                android:textColor="@color/white">

                            </TextView>

                            <TextView
                                android:id="@+id/profile_state_user"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/forumregular"
                                android:textSize="18sp"
                                android:textAlignment="textStart"
                                android:text="@string/category_input_state"
                                android:textColor="@color/white">

                            </TextView>


                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/link_data_profile"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    app:cardElevation="10dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardCornerRadius="20dp"
                    android:layout_marginStart="-20dp"
                    android:layout_marginTop="25dp"
                    android:backgroundTint="@color/grayMozzafiato">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/forumregular"
                        android:textSize="25sp"
                        android:textAlignment="center"
                        android:text="@string/profile_card_data"
                        android:textColor="@color/white">
                    </TextView>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/link_data_negotiate"
                    android:layout_width="280dp"
                    android:layout_height="60dp"
                    app:cardElevation="10dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardCornerRadius="20dp"
                    android:layout_marginStart="-20dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/grayMozzafiato">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/forumregular"
                        android:textSize="25sp"
                        android:textAlignment="center"
                        android:text="@string/profile_card_negotiate"
                        android:textColor="@color/white">
                    </TextView>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/link_contact_profile"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    app:cardElevation="10dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardCornerRadius="20dp"
                    android:layout_marginStart="-20dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/grayMozzafiato">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/forumregular"
                        android:textSize="25sp"
                        android:textAlignment="center"
                        android:text="@string/profile_card_contact"
                        android:textColor="@color/white">
                    </TextView>

                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>