<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_gradient"
    android:id="@+id/register"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/registerAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/forumregular"

            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/titleRegister"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="110dp"
            android:textAlignment="center"
            android:fontFamily="@font/forumregular"
            android:text="@string/title_register"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameRegisterLayout"
            style="@style/StyleInput"
            android:layout_width="272dp"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="230dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameRegisterEdit"
                style="@style/StyleTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/category_input_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneRegisterLayout"
            style="@style/StyleInput"
            android:layout_width="272dp"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="280dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="230dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneRegisterEdit"
                style="@style/StyleTextField"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category_input_phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailRegisterLayout"
            style="@style/StyleInput"
            android:layout_width="272dp"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="360dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="230dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailRegisterEdit"
                style="@style/StyleTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/category_input_email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordRegisterLayout"
            style="@style/StyleInput"
            android:layout_width="272dp"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="440dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="230dp"
            app:endIconMode="password_toggle"
            app:helperTextEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordRegisterEdit"
                style="@style/StyleTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/category_input_password"
                android:inputType="text|textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordConfirmRegisterLayout"
            style="@style/StyleInput"
            android:layout_width="272dp"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="520dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="230dp"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordConfirmRegisterEdit"
                style="@style/StyleTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category_input_confirm_password"
                android:inputType="text|textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registerButton"
            style="@style/StyleButton"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="630dp"
            android:layout_marginEnd="50dp"
            android:text="@string/title_register"
            android:background="@drawable/rounded_border" />

        <TextView
            android:id="@+id/linkRegisterLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="92dp"
            android:layout_marginTop="690dp"
            android:layout_marginEnd="92dp"
            android:textAlignment="center"
            android:fontFamily="@font/forumregular"
            android:text="@string/link_login"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" >

        </TextView>

    </RelativeLayout>

</ScrollView>